adl-frontend/src/test/resources/unit/error/semantic/naming/BadName.adl
//#SemanticError GroupId=ADL ErrorId=WRONG_DEFINITION_NAME line=2
primitive BaddName {
	source my.c;	
}